--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -1492,7 +1492,7 @@ input {
 }
 .aside-nav ul li .depth2 > .depth2-item > .depth3 {
   display: none;
-  background: #0e0e0e;
+  background: var(--bg-darken);
   padding: 6px 0 10px;
   border-top: 1px solid rgba(255, 255, 255, 0.06);
   border-radius: 0 0 5px 5px;
