--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -1247,6 +1247,18 @@ input {
   background-size: contain;
   background-position: center;
 }
+.icon.icon-minus:before {
+  background-image: url(../images/icon/icon-minus.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.icon.icon-plus:before {
+  background-image: url(../images/icon/icon-plus.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
 
 .chip {
   display: inline-flex;
@@ -1945,6 +1957,9 @@ input {
 .modal .box-wrap .box .flex * {
   min-width: 0;
 }
+.modal .box-wrap .box.col1 {
+  grid-column: span 1;
+}
 .modal .box-wrap .box.col2 {
   grid-column: span 2;
 }
@@ -1953,6 +1968,9 @@ input {
 }
 .modal .box-wrap .box.col4 {
   grid-column: span 4;
+}
+.modal .box-wrap + .box-wrap {
+  margin-top: 24px;
 }
 
 /* 바디 스크롤 잠금 */
@@ -2425,22 +2443,26 @@ body.modal-open {
 }
 
 /* space */
+.mt0 {
+  margin-top: 0px !important;
+}
+
 .mt10 {
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 
 .mt20 {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 
 .mt30 {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 
 .mt40 {
-  margin-top: 40px;
+  margin-top: 40px !important;
 }
 
 .mt50 {
-  margin-top: 50px;
+  margin-top: 50px !important;
 }
