--- a/assets/scss/page/page.scss
+++ b/assets/scss/page/page.scss
@@ -1,7 +1,7 @@
 @import "./login.scss";
 @import "./dashboard.scss";
+@import "./menu.scss";
 // @import "./brand.scss";
-// @import "./menu.scss";
 // @import "./guide.scss";
 // @import "./store.scss";
 
