--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -232,18 +232,21 @@ body {
 }
 
 /* space */
+.mt0 {
+  margin-top: 0px !important;
+}
 .mt10 {
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 .mt20 {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 .mt30 {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 .mt40 {
-  margin-top: 40px;
+  margin-top: 40px !important;
 }
 .mt50 { 
-  margin-top: 50px;
+  margin-top: 50px !important;
 }
