--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -128,9 +128,13 @@
       width: 100%;
       min-width: 0;
       .flex * { min-width: 0; }
-      &.col2 { grid-column: span 2; }
-      &.col3 { grid-column: span 3; }
-      &.col4 { grid-column: span 4; }
+      &.col1 { grid-column: span 1; } // 1/4
+      &.col2 { grid-column: span 2; } // 1/2
+      &.col3 { grid-column: span 3; } // 1/3
+      &.col4 { grid-column: span 4; } // 100%
+    }
+    & + .box-wrap {
+      margin-top: 24px;
     }
   }
 }
