--- a/assets/scss/components/components.scss
+++ b/assets/scss/components/components.scss
@@ -7,6 +7,7 @@
 @import "./tabs.scss";
 @import "./chart.scss";
 @import "./list.scss";
+@import "./datepicker.scss";
 
 @import "./sectionComponent.scss";
 
